# weatherly

./: README.md  deploy.ps1  docker-compose.yml  index.html  package-lock.json  package.json
assets/: index-Beh5yUtB.css  index-aKTAsB_2.js
deploy/: README.md
deploy/docker/: backend-compose.yml  backend.Dockerfile  backend.dockerignore
deploy/static/assets/: index-CyVryLro.js
go-http-server/: Dockerfile  README.md  main.go
go-http-server/handlers/: home.go
go-http-server/server/: routes.go  server.go
src/: App.jsx  README.md
src/backend/: .env  README.md  db.sqlite3  pyproject.toml  requirements.txt
src/backend/config/: settings.py
src/backend/weather/: models.py  serializers.py  tests.py  views.py
src/frontend/: .env  README.md  package-lock.json  package.json
src/frontend/src/: App.jsx
